fix for package.json

--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
   "main": "index.js",
   "scripts": {
     "setup": "yarn install",
-    "build": "tsc",
-    "clear": "clear",
-    "pack": "npm run eslint:lint && npm run clear && npm run build && npm run copy-files && pack",
-    "copy-files": "copy_files",
-    "release": "npm run eslint:lint && npm run clear && npm run build && npm run copy-files && npm publish lib",
-    "version": "version",
-    "test-some": "echo $var",
+    "p:build": "tsc",
+    "p:clear": "clear",
+    "p:pack": "npm run eslint:lint && npm run p:clear && npm run p:build && npm run p:copy-files && pack",
+    "p:copy-files": "copy_files",
+    "p:release": "npm run eslint:lint && npm run p:clear && npm run p:build && npm run p:copy-files && npm publish lib",
+    "p:version": "version",
     "eslint:lint": "eslint ./src/**",
     "eslint:fix": "eslint --fix ./src/**",
     "eslint:dump": "eslint --print-config ./.eslintrc.json"
